Fix contrast ratio of green

--- a/src/_includes/css/global.css
+++ b/src/_includes/css/global.css
@@ -51,7 +51,7 @@
 
 	/* Colors */
 	--color-gray-light: #dcdcdc;
-	--color-green: #00ae4c;
+	--color-green: #009340;
 
 	--color-background: #fff;
 	--color-border: var(--color-gray-light);
